conformance/tests/httproute-external-auth-grpc-forward-body.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-auth-grpc-forward-body
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /grpc/allowed/forward-body
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: GRPC
        backendRef:
          name: external-auth-grpc
          port: 9001
        forwardBody:
          maxSize: 100
        grpc:
          allowedHeaders: ~
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /grpc/allowed/forward-body-zero
    - path:
        type: Exact
        value: /grpc/denied/forward-body-zero
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: GRPC
        backendRef:
          name: external-auth-grpc
          port: 9001
        forwardBody:
          maxSize: 0
        grpc:
          allowedHeaders: ~
    backendRefs:
    - name: infra-backend-v1
      port: 8080
